# emx

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in  emxConfig.cmake.in
convert/: README.md  main.cpp
editor/: CMakeLists.txt  about_window.cpp  about_window.hpp  debug_window.cpp  editor.pro  export_window.cpp  gfx_window.cpp  gfx_window.hpp  main.cpp  main_window.cpp  main_window.hpp  new_window.cpp  new_window.hpp  open_window.cpp  pref_window.hpp  resources.qrc  run_window.cpp  run_window.hpp  tool_window.cpp  version_info.hpp
gfx/: gfx_main.cpp
scroller/: Makefile.em  main.cpp  scroller.html  scroller.js  scroller.wasm
scroller/assets/gfx/: Makefile  README.md  gfx_main.cpp
scroller/assets/img/: bg1.gfx  enemy1.gfx  hero.gfx  level.cfg
scroller/assets/img/backgrounds/: star.cfg
scroller/assets/level_data/: level.cfg  level.gfx
scroller/assets/level_data/enemy1/: enemy.cfg
scroller/assets/level_data/hero/: hero.cfg
scroller/assets/levels/: brick.lvl  level2.lvl
scroller/convert/: Makefile  main.cpp
scroller/editor/: README.md  export_window.cpp  export_window.hpp  new_window.hpp  open_window.hpp  pref_window.cpp  tool_window.hpp
src/: camera.cpp  camera.hpp  game.cpp  game.hpp  game_level.cpp  game_level.hpp  gfx_data.cpp  gfx_data.hpp  gfx_file.cpp  gfx_file.hpp  level.cpp  level.hpp  object.cpp  object.hpp  particles.cpp  particles.hpp  star_field.cpp  star_field.hpp  version.hpp  window.cpp  window.hpp
